# okx-quant-trader

./: .env.example  .gitignore  LICENSE  PROJECT-STRUCTURE.md  README.md  __init__.py  pyproject.toml  pytest.ini  run.sh
code/: __init__.py  _http.py  account.py  asset.py  auth.py  cli.py  client.py  config.py  logger.py  market.py  market_filter.py  notifier.py  portfolio.py  public.py  risk.py  runner.py  signal.py  subaccount.py  trade.py  utils.py
code/backtest/: __init__.py  benchmark.py  data_loader.py  fetch_funding.py  fetch_klines.py  matcher.py  metrics.py  run_mvp.py  run_phase2_experiment.py  utils.py  verify_headers.py
code/reference/: matcher.py  strategy_adapter.py
data/funding/: BTC-USDT-SWAP_funding.parquet  ETH-USDT-SWAP_funding.parquet
docs/: BACKTEST_DESIGN.md  LESSONS_LEARNED.md  NOTIFIER.md  OKX-API-v5-Trading-Documentation.md  SECURITY.md  SIGNALS.md  WEB_DASHBOARD_DESIGN.md  WORKFLOW.md
docs/agent-context/: INDEX.md  backtest_system_design_report.md  backtest_system_design_report_V2.1.md  backtest_system_design_report_V2.md  basic_usage.py
docs/examples/: basic_usage.py
prompts/: JOB-DISCIPLINE.md  trade-rule.md
scripts/: __init__.py  audit_credentials.py  convert_env.py  daily_summary.py  diagnose_okx_demo.py  fetch_funding.py  fetch_klines.py  fragility_scan.py  heartbeat_push.py  kelly_backtest_demo.py  review_push.py  risk_monitor.py  risk_thresholds.py  rotate_telegram_key.py  runner_watchdog.py  signal_runner.py  sync_portfolio.py  telegram_send.py  test_connection.py  test_notifier.py  verify_env.py  verify_order_chain.py
state/: config.json
tests/: conftest.py  test_active_probe_chaos.py  test_api_chaos.py  test_constitution.py  test_diagnose_okx_demo.py  test_fragility_scan.py  test_gap_crash_chaos.py  test_heartbeat_push.py  test_live_first_week.py  test_portfolio_kelly.py  test_portfolio_schema.py  test_review_push.py  test_risk.py  test_risk_conflict.py  test_risk_kelly.py  test_risk_kelly_decision.py  test_risk_monitor.py  test_risk_thresholds.py  test_rotate_telegram_key.py  test_runner_filter.py  test_signal.py  test_signal_runner.py  test_sync_portfolio_margin.py  test_utils.py
web/: README.md  run-prod.sh  run.sh
web/backend/: app.py  requirements.txt
web/frontend/: index.html  package-lock.json  (+2 more)
(+15 files in other folders)
